# clock47

./: .gitignore  CMakeLists.txt  Makefile  build.sh  makedigit.py  openocd.cfg  sdkconfig
main/: CMakeLists.txt  ClockWidget.cpp  ClockWidget.h  Color.cpp  Color.h  DateWidget.cpp  DateWidget.h  EffectWidget.cpp  EffectWidget.h  GenericTextWidget.cpp  GenericTextWidget.h  StackWidget.cpp  StackWidget.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h  benchmark.h  buttons.cpp  buttons.h  clock47_main.cpp  display.cpp  display.h  display_defines.h  draw.cpp  draw.h  effect.cpp  effect.h  fastmath.cpp  fastmath.h  httpserver.cpp  httpserver.h  message.cpp  message.h  mode.cpp  mode.h  network.cpp  network.h  property.cpp  property.h  (+2 more)
scripts/: make_sin_table.py
web/: CMakeLists.txt  index.html  script.jsx  style.css  web.cpp.in
